[gd_scene load_steps=7 format=3 uid="uid://djo24i4uwfsq1"]

[ext_resource type="Script" uid="uid://gvf16rrcdlk1" path="res://scripts/scenario_card.gd" id="1_1anhm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1anhm"]
bg_color = Color(0.325924, 0.596499, 0.994583, 1)

[sub_resource type="Animation" id="Animation_30445"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -500)]
}

[sub_resource type="Animation" id="Animation_1anhm"]
resource_name = "SlideIn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -500), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_f8le8"]
resource_name = "SlideOut"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 800)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xy6q"]
_data = {
&"RESET": SubResource("Animation_30445"),
&"SlideIn": SubResource("Animation_1anhm"),
&"SlideOut": SubResource("Animation_f8le8")
}

[node name="ScenarioCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -500.0
offset_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1anhm")

[node name="CardPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -350.0
offset_right = 540.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1anhm")

[node name="VBox" type="VBoxContainer" parent="CardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ScenarioText" type="Label" parent="CardPanel/VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 3

[node name="ChoiceButton1" type="Button" parent="CardPanel/VBox"]
layout_mode = 2
text = "Choice 1"

[node name="ChoiceButton2" type="Button" parent="CardPanel/VBox"]
layout_mode = 2
text = "Choice 2"

[node name="ChoiceButton3" type="Button" parent="CardPanel/VBox"]
layout_mode = 2
text = "Choice 3"

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3xy6q")
}
